package ar.fiuba.algo3;

public interface Animal {
    float energia();
}
